# ticketing-system

./: CMakeLists.txt  README.md
include/: TicketSystem.h
src/: TicketSystem.cpp  TicketSystem.h  main.cpp
